# sdp-tools

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.bak  compose.yml  docker-compose.test.yml  pyproject.toml  start-compose-tests.sh
alembic/: env.py
app/: .env.template  alembic.ini  aqueries.py  data_regions  data_tlo  main.py  prestart-app.sh  queries.py
app/alembic/: env.py
app/alembic/versions/: 2025_10_28_2107-a54ee96794d4_create_users_table.py  2025_10_29_1043-5f37c8f93ce9_create_users_table.py  2025_11_04_2043-02220211904e_create_user_table.py  2025_11_06_1847-2fc0df5677a0_create_trafficlightobject_table.py  2025_11_06_1926-b8e7dd7f64b2_create_trafficlightobject_table.py  (+13 more)
app/api/: dependencies.py
app/api/api_v1/: __init__.py  (+1 more)
app/app-cli/: __demo.py  __init__.py  create_user.py  dependencies.py  my_cli.py  my_cli2.py
app/application/: dependencies.py
app/auth/: README.md  constants.py  create_tokens.py  exceptions.py  routes.py  schemas.py  services.py  token_validation.py  utils.py
app/core/: config.py  constants.py  dependencies.py  enums.py  exceptions.py  field_validators.py  my_test.py  reg_exps.py  utils.py
app/dev_tools/: aqueries.py  queries.py  sql_queries.sql
app/main_app/: __init__.py
app/presentation/: jwt_utils.py
app/tests/: settings.py  test_login.py
app/use_cases/: get_by_id.py
app/users/: create_root.py  crud.py  demo.py  example_users.json  organizations.py  roles.py  routes.py  schemas.py
app/utils/: case_converter.py  check_types.py  init_db_data.py  timer.py
docker-build/: Dockerfile.bak
docker-build/app/: Dockerfile
docker-build/app-tests/: Dockerfile
tests/: conftest.py
tests/test_unit/: test_validators.py
tests/test_utils/: test_field_validator.py
tests/utils/: create_user_entity.py
(+177 files in other folders)
